# RayleighBenard-Dataset

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  RayleighBenard-Dataset.dvc  dataset.dvc  environment.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
conda/: linux-64.yaml  osx-arm64.yaml
data/: .gitignore  RayleighBenard-Dataset.dvc
data/checkpoints/: ra10000.chk.h5  ra10000.h5  ra100000.chk.h5  ra1000000.chk.h5
fluiddata/: generate.py  run.py  view_cylinder.py  view_rbc.py
fluiddata/config/: generate.yaml  run.yaml
fluiddata/cylinder/: run.py
fluiddata/dataset/: __init__.py  cylinder_dataset.py  h5_dataset.py  rbc_dataset.py
fluiddata/rbc/: generate.py  run.py
fluiddata/utils/: __init__.py  callbacks.py  image_visualizer.py  vector_field_visualizer.py
notebooks/: 1.0-tm-hydrogym.ipynb
rbcdata/: __init__.py  compare.txt  environment_rbcdata.yml  generate.py  generate_dataset.py  inspectAgent.py  marl.py  ray_test.py  run.py  run_environment.py  run_environment_copy2.py  run_environment_manualcontrol.py  run_environment_modelfree.py  run_environment_proportionalControl.py  run_environment_vis2.py  runcopy.py  sa.py  sa.sbatch  sbsa.py  sbsa_inspectAgent.py  testSB.py  testray MA.py  testray SA.py  testray SA.sbatch  testscr.py  tfunc_new.py  view.py  view_dataset.py
rbcdata/callbacks/: callbacks.py  callbacks_sb.py  ray_callbacks.py  sb3_callbacks.py
rbcdata/config/: __init__.py  generate.yaml  marl.yaml  run.yaml  (+4 more)
scripts/: cp_baseline_ckps.py  multiagent_rl.sbatch  sbsa.sbatch
(+241 files in other folders)
