[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rbcdata"
version = "0.0.3"
authors = [{ name = "Thorben Markmann", email = "dev@thorbenmarkmann.com" }]
description = "Tools for managing Rayleigh Benard Convection data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["numpy", "h5py", "hydra-core", "gymnasium", "tqdm"]

[project.scripts]
rbcview = "rbcdata.scripts.dataset_view:view_dataset"
rbcgen = "rbcdata.scripts.dataset_generate:main"

[project.urls]
Homepage = "https://github.com/SAIL-project/RayleighBenard-Dataset"
Issues = "https://github.com/SAIL-project/RayleighBenard-Dataset/issues"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
